--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ nav ul, footer ul {
     font-family:'Roboto', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
-    font-weight: bold;
+    font-weight: thin;
 }
 nav ul li, footer ul li {
     display: inline;
