--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,8 +38,9 @@
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
+        <p ❤️ Lovingly built using <a href="https://jekyllrb.com/">Jekyll
+class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
       </div>
-    </div>
+    </div>v
   </div>
 </footer>
