--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
           </li>
           {% endif %}
         </ul>
-        <p> ❤️ Lovingly built using <a href="https://jekyllrb.com/Jekyll<a/> using the Clean Blog Theme
+        <p> ❤️ Lovingly built using <a href="https://jekyllrb.com/Jekyll<a/> using the Clean Blog Theme</p>
 <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
       </div>
     </div>v
