--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,9 +38,9 @@
           </li>
           {% endif %}
         </ul>
-        <p> ❤️ Lovingly built using <a href="https://jekyllrb.com/">Jekyll<a/> and the <a href="https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll">Clean Blog</a> Theme</p>
+        <p class="copyright text-muted"> ❤️ Lovingly built using <a href="https://jekyllrb.com/">Jekyll<a/> and the <a href="https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll">Clean Blog</a> Theme</p>
 <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
       </div>
-    </div>v
+    </div>
   </div>
 </footer>
