--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,8 +38,8 @@
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted"> ❤️ Lovingly built using <a href="https://jekyllrb.com/">Jekyll<a/> and the <a href="https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll">Clean Blog</a> Theme</p>
-<p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
+        <p class="copyright text-muted"> ❤️ Lovingly built using <a href="https://jekyllrb.com/">Jekyll<a/> and the <a href="https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll">Clean Blog</a> Theme <br />
+            Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
       </div>
     </div>
   </div>
