--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted"> ❤️ Lovingly built using <a href="https://jekyllrb.com/">Jekyll<a/> and the <a href="https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll">Clean Blog</a> Theme <br />
+        <p class="copyright text-muted"> ❤️ erstellt mit <a href="https://jekyllrb.com/">Jekyll<a/> und dem <a href="https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll">Clean Blog</a> Theme <br />
             Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
       </div>
     </div>
