--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,9 @@
           <a class="nav-link" href="{{"/about" | relative_url }}">über Uns</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{"/elektrokontrollen" | relative_url }}">Elektrokontrollen</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
         </li>
         <li class="nav-item">
