--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,6 +17,19 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/elektrokontrollen" | relative_url }}">Elektrokontrollen</a>
         </li>
+        <ul class="navbar-nav ml-auto">
+<!-- Untermenue -->          
+          <li class="nav-item">
+            <a class="nav-link" href="{{"/elektrokontrollen#hauseigentümer" | relative_url }}">hauseigentümer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{"/elektrokontrollen#immobilienverwaltungen" | relative_url }}">immobilienverwaltungen</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{"/elektrokontrollen#wir-übernehmen-ihre-kontrollen" | relative_url }}">installationsfirmen</a>
+          </li>
+
+        </ul>
         <li class="nav-item">
           <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
         </li>
