--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,8 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/elektrokontrollen" | relative_url }}">Elektrokontrollen</a>
         </li>
-        <ul class="navbar-nav ml-auto">
-<!-- Untermenue -->          
+<!-- Untermenue -->
+        <ul <!-- class="navbar-nav ml-auto" -->>
+
           <li class="nav-item">
             <a class="nav-link" href="{{"/elektrokontrollen#hauseigentümer" | relative_url }}">hauseigentümer</a>
           </li>
