--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link" href="{{"/elektrokontrollen" | relative_url }}">Elektrokontrollen</a>
         </li>
 <!-- Untermenue -->
-        <ul <!-- class="navbar-nav ml-auto" -->>
+        <ul>  <!-- class="navbar-nav ml-auto" -->
 
           <li class="nav-item">
             <a class="nav-link" href="{{"/elektrokontrollen#hauseigentümer" | relative_url }}">hauseigentümer</a>
