--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,9 +17,8 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/elektrokontrollen" | relative_url }}">Elektrokontrollen</a>
         </li>
-<!-- Untermenue -->
-        <ul>  <!-- class="navbar-nav ml-auto" -->
-
+<!-- Untermenue
+        <ul>  <!-- class="navbar-nav ml-auto" 
           <li class="nav-item">
             <a class="nav-link" href="{{"/elektrokontrollen#hauseigentümer" | relative_url }}">hauseigentümer</a>
           </li>
@@ -29,7 +28,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{{"/elektrokontrollen#wir-übernehmen-ihre-kontrollen" | relative_url }}">installationsfirmen</a>
           </li>
-
+-->
         </ul>
         <li class="nav-item">
           <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
