--- a/_includes/navbar-kontrollen.html
+++ b/_includes/navbar-kontrollen.html
@@ -15,9 +15,8 @@
           <a class="nav-link" href="{{"/about" | relative_url }}">über Uns</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/elektrokontrollen" | relative_url }}">Elektrokontrollen</a>
+          <a class="nav-link" href="{{"/elektrokontrollen#hauseigentümer" | relative_url }}">hauseigentümer</a>
         </li>
-        
 <!-- Untermenue
         <ul>  <!-- class="navbar-nav ml-auto"
           <li class="nav-item">
@@ -33,10 +32,10 @@
         </ul>
         -->
         <li class="nav-item">
-          <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
+          <a class="nav-link" href="{{"/elektrokontrollen#immobilienverwaltungen" | relative_url }}">immobilienverwaltungen</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/handy" | relative_url }}">Reparaturen</a>
+          <a class="nav-link" href="{{"/elektrokontrollen#wir-übernehmen-ihre-kontrollen" | relative_url }}">installationsfirmen</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Kontakt</a>
