Include Erstprüfung NIN Text

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,7 +17,7 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/elektrokontrollen" | relative_url }}">Elektrokontrollen</a>
         </li>
-        
+
 <!-- Untermenue
         <ul>  <!-- class="navbar-nav ml-auto"
           <li class="nav-item">
@@ -34,6 +34,9 @@
         -->
         <li class="nav-item">
           <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/erstpruefung" | relative_url }}">Erstprüfung</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/handy" | relative_url }}">Reparaturen</a>
