--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/erstpruefung" | relative_url }}">Erstprüfung</a>
+          <a class="nav-link" href="{{"/erstpruefung" | relative_url }}">erstprüfung</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/handy" | relative_url }}">Reparaturen</a>
