--- a/_includes/navbar-erstpruefung.html
+++ b/_includes/navbar-erstpruefung.html
@@ -1,41 +1,32 @@
 <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#grundlagen">Grundlagen</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#und-was-heisst-das-für-uns-in-der-praxis">Ablauf</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#checklisten">Checklisten</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <div class="container">
+    <a class="navbar-brand" href="{{"/" | relative_url }}">Sg3.ch</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+      <i class="fa fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/about" | relative_url }}">über Uns</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/erstpruefung#grundlagen" | relative_url }}">grundlagen</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/erstpruefung#und-was-heisst-das-für-uns-in-der-praxis" | relative_url }}">Ablauf</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/erstpruefung#checklisten" | relative_url }}">Checklisten</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/contact" | relative_url }}">Kontakt</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
