--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,10 +1,10 @@
 <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+<!--    <section id="team" class="bg-light-gray"> -->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Unser Team</h2>
+                    <h3 class="section-subheading text-muted">kompetent, einfach, persönlich</h3>
                 </div>
             </div>
             <div class="row">
@@ -22,7 +22,6 @@
                                 </a>
                             </li>
                             {% endfor %}
-
                         </ul>
                     </div>
                 </div>
@@ -34,4 +33,4 @@
                 </div>
             </div>
         </div>
-    </section>
+<!--     </section> -->
