--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,5 +1,5 @@
 <!-- Team Section -->
-<!--    <section id="team" class="bg-light-gray"> -->
+<section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -33,4 +33,39 @@
                 </div>
             </div>
         </div>
-<!--     </section> -->
+</section>
+
+<section>
+  <div class="row">
+    <div class="col-lg-12 text-center">
+      <h2>Unser TEam</h2>
+      <h3>kep</h3>
+    </div>
+  </div>
+  <div class="row">
+    {% for member in site.people %}
+    <div class="col-sm-4">
+      <div class="team-member">
+        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+        <h4>{{ member.name }}</h4>
+        <p class="text-muted">{{ member.position }}</p>
+        <ul class="list-inline">
+        <li>
+          <a href="{{ network.url }}">
+              <i class="fa fa-{{ network.title }}"></i>
+          </a>
+        </li>
+        {% endfor %}
+        </ul>
+      </div>
+    </div>
+    {% endfor %}
+    </div>
+    <div class="row">
+      <div class="col-lg-8 col-lg offset-2 text-center">
+        <p>Seit über Fünf Jahren.</p>
+
+      </div>
+    </div>
+
+</section>
