--- a/_includes/navbar-erstpruefung.html
+++ b/_includes/navbar-erstpruefung.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" href="{{"/" | relative_url }}">Sg3.ch</a>
+    <a class="navbar-brand" href="{{"/" | relative_url }}">erstpruefung.ch</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
+          <a class="nav-link" href="{{"/erstpruefung" | relative_url }}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">über Uns</a>
@@ -18,10 +18,10 @@
           <a class="nav-link" href="{{"/erstpruefung#grundlagen" | relative_url }}">grundlagen</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/erstpruefung#und-was-heisst-das-für-uns-in-der-praxis" | relative_url }}">Ablauf</a>
+          <a class="nav-link" href="{{"/erstpruefung#und-was-heisst-das-konkret?" | relative_url }}">Ablauf</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/erstpruefung#checklisten" | relative_url }}">Checklisten</a>
+          <a class="nav-link" href="{{"/erstpruefung#hilfsmittel" | relative_url }}">Hilfsmittel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Kontakt</a>
