Alles auf erstpruefung

--- a/_includes/navbar-erstpruefung.html
+++ b/_includes/navbar-erstpruefung.html
@@ -9,11 +9,11 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{"/erstpruefung" | relative_url }}">Home</a>
+          <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
         </li>
-        <li class="nav-item">
+<!--   <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">über Uns</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="{{"/erstpruefung#grundlagen" | relative_url }}">grundlagen</a>
         </li>
@@ -23,9 +23,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/erstpruefung#hilfsmittel" | relative_url }}">Hilfsmittel</a>
         </li>
-        <li class="nav-item">
+      <!--   <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Kontakt</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
