--- a/_includes/navbar-erstpruefung.html
+++ b/_includes/navbar-erstpruefung.html
@@ -23,9 +23,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/erstpruefung#hilfsmittel" | relative_url }}">Hilfsmittel</a>
         </li>
-        <li class="nav-item">
+  <!--      <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Kontakt</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
